-*- coding: iso-8859-1 -*-
Mailman - The GNU Mailing List Management System
Copyright (C) 1998-2015 by the Free Software Foundation, Inc.
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

Here is a history of user visible changes to Mailman.

2.1.21 (xx-xxx-xxxx)

  New Features

    - Thanks to Jim Popovitch there is now a feature to automatically turn
      on moderation for a malicious list member who attempts to flood a list
      with spam.  See the details for the Privacy options ... -> Sender
      filters -> member_verbosity_threshold and member_verbosity_interval
      settings in the web admin UI and the documentation in Defaults.py for
      the DEFAULT_MEMBER_VERBOSITY_* and VERBOSE_CLEAN_LIMIT settings for
      information.

    - bin/list_members now has options to display all moderated or all
      non-moderated members.

    - There is now a mm_cfg.py setting GLOBAL_BAN_LIST which is like the
      individual list's ban_list but applies globally to all subscribe
      requests.  See the description in Defaults.py for more details.

  i18n

    - Several Galician templates that were improperly encoded as iso-8859-1
      have been fixed.  (LP: #1532504)

    - The German translation has been updated by Mirian Margiani.

    - The Brazilian Portugese translation has been updated by Emerson Ribeiro
      de Mello.

  Bug fixes and other patches

    - Modified contrib/mmdsr to report held and banned subscriptions and DMARC
      lookups in their own categories.

    - Fixed a bug that could create a garbled From: header with certain DMARC
      mitigation actions.  (LP: #1536816)

    - Treat a poster's address which matches an equivalent_domains address as
      a list member for the regular_exclude_ignore check.  (LP: #1526550)

    - Fixed an issue that sometimes left no white space following
      subject_prefix.  (LP: #1525954)

    - Vette log entries for banned subscriptions now include the source of