@@ -37,7 +37,7 @@ HEX_VERSION = ((MAJOR_REV << 24) | (MINOR_REV << 16) | (MICRO_REV << 8) |
                (REL_LEVEL << 4)  | (REL_SERIAL << 0))
 
 # config.pck schema version number
-DATA_FILE_VERSION = 109
+DATA_FILE_VERSION = 110
 
 # qfile/*.db schema version number
 QFILE_SCHEMA_VERSION = 3
