@@ -494,6 +494,8 @@ def NewVars(l):
                        mm_cfg.DEFAULT_DMARC_MODERATION_ACTION)
     add_only_if_missing('dmarc_quarantine_moderation_action',
                        mm_cfg.DEFAULT_DMARC_QUARANTINE_MODERATION_ACTION)
+    add_only_if_missing('dmarc_none_moderation_action',
+                       mm_cfg.DEFAULT_DMARC_NONE_MODERATION_ACTION)
     add_only_if_missing('dmarc_moderation_notice', '')
     add_only_if_missing('dmarc_wrapped_message_text',
                        mm_cfg.DEFAULT_DMARC_WRAPPED_MESSAGE_TEXT)
